--- a/app_rule/verified_apps.json
+++ b/app_rule/verified_apps.json
@@ -1,6 +1,6 @@
 [
   {
-    "package_name": "accky.kreved.skrwt.skrwt"
+    "package_name": "com.dv.adm"
   },
   {
     "package_name": "android.substratum.service"
