--- a/app_rule/apps/com.tmri.app.main.json
+++ b/app_rule/apps/com.tmri.app.main.json
@@ -1,14 +1,14 @@
 {
-    "package": "com.google.android.apps.photos",
-    "verified": true,
+    "package": "com.tmri.app.main",
+    "verified": false,
     "authors": [
         "Xuanmo"
     ],
     "last_update": {
         "timestamp": 1704038400
     },
-    "recommendation": "@unnecessary",
+    "recommendation": "@recommended",
     "behaviors": [
-        "@standard"
+        "@abuse"
     ]
 }
