--- a/app_rule/apps/com.google.android.apps.googlevoice.json
+++ b/app_rule/apps/com.google.android.apps.googlevoice.json
@@ -1,5 +1,5 @@
 {
-    "package": "me.alzz.awsl",
+    "package": "com.google.android.apps.googlevoice",
     "verified": true,
     "authors": [
         "Xuanmo"
