--- a/app_rule/apps/com.google.android.apps.photos.json
+++ b/app_rule/apps/com.google.android.apps.photos.json
@@ -1,14 +1,14 @@
 {
     "package": "com.google.android.apps.photos",
-    "verified": true,
+    "verified": false,
     "authors": [
         "Xuanmo"
     ],
     "last_update": {
         "timestamp": 1704038400
     },
-    "recommendation": "@unnecessary",
+    "recommendation": "@abuse",
     "behaviors": [
-        "@standard"
+        "@recommendation"
     ]
 }
